Updated API definition to include /status endpoint, added GET/PUT, added get_status to API code
