# led-controller-api/ucontroller.py
@@ -7,9 +7,12 @@
 from constants import *
 from threading import Lock
 import serial
+import time
+import re
 
 serialPort = serial.Serial(USB_SERIAL, 115200)
 lock = Lock()
+statusPattern = re.compile("P:(?P<power_state>[0-9]+),T:(?P<mosfet_temperature>[.0-9]+)")
 
 def set_config(config, startup=False):
     led_count = config['topLedCount'] + config['rightLedCount'] + config['bottomLedCount'] + config['leftLedCount']
@@ -26,6 +29,17 @@ def update_led(led_number, red, green, blue, brightness):
     update_command = "U:%d,%d,%d,%d,%d" % (led_number, red, green, blue, brightness)
     send(update_command)
     return
+
+
+def get_status():
+    send('R')
+    time.sleep(0.01)
+    statusLine = serialPort.readline()
+    matcher = statusPattern.match(statusLine)
+    return {
+        'powerState': matcher.group('power_state') == 1,
+        'mosfetTemperature': matcher.group('mosfet_temperature')
+    }
 
 
 def send(command):
